Finished first two crash course notebooks. Other refactoring

--- a/Overview.ipynb
+++ b/Overview.ipynb
@@ -110,11 +110,24 @@
     "\n",
     "The _crash course_ is intended to focus on learning the core API as quickly as possible, but using nontrivial examples. In contrast, the [_Advanced Ray_](#user-content-advanced-ray) tutorial begins with an explanation of why Ray was created, what problems it solves, and then dives into more advanced API usage, profiling and debugging applications, and how Ray works behind the scenes.\n",
     "\n",
+    "| #  | Lesson (Notebook)                                     | Description                                               |\n",
+    "| :- | :---------------------------------------------------- | :-------------------------------------------------------- |\n",
+    "| 00 | [Overview](00-Ray-Crash-Course-Overview.ipynb)        | A _table of contents_ for this tutorial.                  |\n",
+    "| 01 | [Ray Tasks](01-Ray-Crash-Course-Tasks.ipynb)          | Understanding how Ray converts normal Python functions into distributed _stateless tasks_. |\n",
+    "| 02 | [Ray Actors](02-Ray-Crash-Course-Actors.ipynb)        | Understanding how Ray converts normal Python classes into distributed, _stateful actors_.  |\n",
+    "| 03 | [Why Ray?](03-Why-Ray.ipynb)                          | Now that you've seen Ray in action, take a step back and explore the origin and motivations for Ray, and the Ray growing ecosystem of libraries and tools.  |\n",
+    "| 04 | [Adopting Ray](04-Adopting-Ray.ipynb)                 | Ray drop-in replacements for common parallelism APIs, about the Ray community, etc. |\n",
+    "| 05 | [Running Ray Clusters](05-Running-Ray-Clusters.ipynb) | How to run Ray in a clustered environment, submit your work to it, and integrate with your local development processes. |\n",
+    "\n",
+    "<!--\n",
     "* 00 - [Overview](ray-crash-course/00-Ray-Crash-Course-Overview.ipynb): A _table of contents_ for this tutorial.\n",
     "* 01 - [Ray Crash Course: Tasks](ray-crash-course/01-Ray-Crash-Course-Tasks.ipynb): Understanding how Ray converts normal Python functions into distributed _stateless tasks_.\n",
     "* 02 - [Ray Crash Course: Actors](ray-crash-course/02-Ray-Crash-Course-Actors.ipynb): Understanding how Ray converts normal Python classes into distributed, _stateful actors_.\n",
     "* 03 - [Adopting Ray](03-Adopting-Ray.ipynb): Ray drop-in replacements for common parallelism APIs, about the Ray community, etc.\n",
-    "* 04 - [Running Ray Clusters](04-Running-Ray-Clusters.ipynb): How to run Ray in a clustered environment, submit your work to it, and integrate with your local development process.\n",
+    "* 04 - [Running Ray Clusters](04-Running-Ray-Clusters.ipynb): How to run Ray in a clustered environment, submit your work to it, and integrate with your local development processes.\n",
+    "-->\n",
+    "\n",
+    "In addition, exercise solutions for this tutorial can be found [here](advanced-ray/solutions/Ray-Crash-Course-Solutions.ipynb).\n",
     "\n",
     "Once you've completed this tutorial, go through [_Advanced Ray_](#user-content-advanced-ray) or explore one of the ML-related library tutorials, in any order."
    ]
@@ -133,12 +146,11 @@
     "| #  | Lesson | Description |\n",
     "| :- | :----- | :---------- |\n",
     "| 00 | [Overview](advanced-ray/00-Overview.ipynb) | A _table of contents_ for this tutorial. |\n",
-    "| 01 | [Why Ray?](advanced-ray/01-Why-Ray.ipynb) | Start in this notebook if you want an explanation of the origin and motivations for Ray. |\n",
-    "| 02 | [Ray Tasks Revisited](advanced-ray/02-Ray-Tasks-Revisited.ipynb) | More exploration of `ray.wait()` usage patterns, task dependencies and their management, task profiling techniques, and task scheduling. |\n",
-    "| 03 | [Ray Actors Revisited](advanced-ray/03-Ray-Actors-Revisited.ipynb) | A more in-depth look at Actor scheduling under the hood and profiling performance using the _Ray Dashboard_. |\n",
-    "| 04 | [Exploring Ray API Calls](advanced-ray/04-Exploring-Ray-API-Calls.ipynb) | The Ray API has other API calls for more advanced scenarios, which are surveyed in this optional lesson. Options you can pass to the API calls already learned are explored. |\n",
+    "| 01 | [Ray Tasks Revisited](advanced-ray/01-Ray-Tasks-Revisited.ipynb) | More exploration of `ray.wait()` usage patterns, task dependencies and their management, task profiling techniques, and task scheduling. |\n",
+    "| 02 | [Ray Actors Revisited](advanced-ray/02-Ray-Actors-Revisited.ipynb) | A more in-depth look at Actor scheduling under the hood and profiling performance using the _Ray Dashboard_. |\n",
+    "| 03 | [Exploring Ray API Calls](advanced-ray/03-Exploring-Ray-API-Calls.ipynb) | The Ray API has other API calls for more advanced scenarios, which are surveyed in this optional lesson. Options you can pass to the API calls already learned are explored. |\n",
     "\n",
-    "In addition, exercise solutions for this tutorial can be found [here](advanced-ray/solutions/solutions.ipynb)."
+    "In addition, exercise solutions for this tutorial can be found [here](advanced-ray/solutions/Advanced-Ray-Solutions.ipynb)."
    ]
   },
   {
@@ -148,6 +160,8 @@
     "### Ray RLlib\n",
     "\n",
     "Directory: `ray-rllib`\n",
+    "\n",
+    "> **Note:** This is a draft tutorial, subject to significant change.\n",
     "\n",
     "_Ray RLlib_ is Ray's system for _reinforcement learning_. This tutorial begins with a \"crash course\" in RL concepts. It then explores several of the commonly-used algorithms and approaches for different applications.\n",
     "\n",
@@ -163,7 +177,7 @@
     "| 04b | [Application: Taxi](rllib/04b-Application-Taxi.ipynb) | Based on the `Taxi-v3` environment from OpenAI Gym. |\n",
     "| 04c | [Application: Frozen Lake](rllib/04c-Application-Frozen-Lake.ipynb) | Based on the `FrozenLake-v0` environment from OpenAI Gym. |\n",
     "\n",
-    "In addition, exercise solutions for this tutorial can be found [here](rllib/solutions/solutions.ipynb).\n",
+    "In addition, exercise solutions for this tutorial can be found [here](rllib/solutions/Ray-RLlib-Solutions.ipynb).\n",
     "\n",
     "For earlier versions of some of these tutorials, see [`rllib_exercises`](https://github.com/ray-project/tutorial/blob/master/rllib_exercises/rllib_colab.ipynb) in the original [github.com/ray-project/tutorial](https://github.com/ray-project/tutorial) project."
    ]
@@ -178,7 +192,7 @@
     "\n",
     "_Ray Tune_ is Ray's system for _hyperparameter tuning_. This tutorial starts with an explanation of what hyperparameter tuning is for and the performances challenges doing it for many applications. Then the tutorial explores how to use _Tune_, how it integrates with several popular ML frameworks, and the algorithms supported in _Tune_.\n",
     "\n",
-    "This tutorial will be released soon."
+    "> **Note:** This tutorial will be released soon."
    ]
   },
   {
@@ -191,7 +205,7 @@
     "\n",
     "_Ray SGD_ is a tool to more easily exploit a cluster to perform training with _Stochastic Gradient Descent_ using PyTorch (TensorFlow support forthcoming).\n",
     "\n",
-    "This tutorial will be released soon."
+    "> **Note:** This tutorial will be released soon."
    ]
   },
   {
@@ -204,15 +218,8 @@
     "\n",
     "_Ray Serve_ is Ray's system for scalable _model serving_, with capabilities that also make it suitable for other web server applications. This tutorial starts with an explanation of what's required in model serving, followed by a tour of the API with examples.\n",
     "\n",
-    "This tutorial will be released soon."
+    "> **Note:** This tutorial will be released soon."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
