--- a/rllib/00-Ray-RLlib-Overview.ipynb
+++ b/rllib/00-Ray-RLlib-Overview.ipynb
@@ -38,7 +38,7 @@
     "| 04b | [Application: Taxi](04b-Application-Taxi.ipynb) | Based on the `Taxi-v3` environment from OpenAI Gym. |\n",
     "| 04c | [Application: Frozen Lake](04c-Application-Frozen-Lake.ipynb) | Based on the `FrozenLake-v0` environment from OpenAI Gym. |\n",
     "\n",
-    "In addition, exercise solutions for this tutorial can be found [here](solutions/solutions.ipynb).\n",
+    "In addition, exercise solutions for this tutorial can be found [here](solutions/Ray-RLlib-Solutions.ipynb).\n",
     "\n",
     "For earlier versions of some of these tutorials, see [`rllib_exercises`](https://github.com/ray-project/tutorial/blob/master/rllib_exercises/rllib_colab.ipynb) in the original [github.com/ray-project/tutorial](https://github.com/ray-project/tutorial) project."
    ]
