--- a/ray-crash-course/00-Ray-Crash-Course-Overview.ipynb
+++ b/ray-crash-course/00-Ray-Crash-Course-Overview.ipynb
@@ -36,16 +36,24 @@
     "| 00 | [Overview](00-Ray-Crash-Course-Overview.ipynb)    | This notebook.                                            |\n",
     "| 01 | [Ray Tasks](01-Ray-Crash-Course-Tasks.ipynb)      | Scaling _stateless_ work using Ray _tasks_.               |\n",
     "| 02 | [Ray Actors](02-Ray-Crash-Course-Actors.ipynb)    | Scaling work with distributed _state_ using Ray _actors_. |\n",
-    "| 03 | [Adopting Ray](03-Adopting-Ray.ipynb)             | Ray drop-in replacements for common parallelism APIs, about the Ray community, etc. |\n",
-    "| 04 | [Running Ray Clusters](04-Running-Ray-Clusters.ipynb) | How to run Ray in a clustered environment, submit your work to it, and integrate with your local development process. |"
+    "| 03 | [Why Ray?](03-Why-Ray.ipynb)                      | Now that you've seen Ray in action, take a step back and explore the origin and motivations for Ray, and the Ray growing ecosystem of libraries and tools.  |\n",
+    "| 04 | [Adopting Ray](04-Adopting-Ray.ipynb)             | Ray drop-in replacements for common parallelism APIs, about the Ray community, etc. |\n",
+    "| 05 | [Running Ray Clusters](05-Running-Ray-Clusters.ipynb) | How to run Ray in a clustered environment, submit your work to it, and integrate with your local development process. |"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In addition, exercise solutions for this tutorial can be found [here](solutions/solutions.ipynb)."
+    "In addition, exercise solutions for this tutorial can be found [here](solutions/Ray-Crash-Course-Solutions.ipynb)."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
