--- a/rllib/01-Introduction-to-Reinforcement-Learning.ipynb
+++ b/rllib/01-Introduction-to-Reinforcement-Learning.ipynb
@@ -389,7 +389,7 @@
     "\n",
     "Finish implementing the `rollout_policy` function below, which should take an environment *and* a policy. The *policy* is a function that takes in a *state* and returns an *action*. The main difference is that instead of choosing a **random action**, the action should be chosen **with the policy** (as a function of the state).\n",
     "\n",
-    "> **Note:** Exercise solutions for this tutorial can be found [here](solutions/solutions.ipynb)."
+    "> **Note:** Exercise solutions for this tutorial can be found [here](solutions/Ray-RLlib-Solutions.ipynb)."
    ]
   },
   {
