--- a/ray-crash-course/00-Ray-Crash-Course-Overview.ipynb
+++ b/ray-crash-course/00-Ray-Crash-Course-Overview.ipynb
@@ -13,10 +13,12 @@
    "source": [
     "© 2019-2020, Anyscale. All Rights Reserved\n",
     "\n",
-    "This tutorial, part of [Anyscale Academy](https://anyscale.com/academy), provides a \"just the facts\" introduction to [Ray](https://ray.io), the system for scaling your applications from a laptop to a cluster. Here we focus on the core Ray API for distributed work loads:\n",
+    "This tutorial, part of [Anyscale Academy](https://anyscale.com/academy), provides a \"just the facts\" introduction to [Ray](https://ray.io), the system for scaling your applications from a laptop to a cluster. Here, we start with a hands on exploration of the core Ray API for distributed work loads:\n",
     "\n",
     "* Ray _tasks_: Distributed execution of _stateless_ Python functions.\n",
     "* Ray _actors_: Distributed execution of _stateful_ Python classes.\n",
+    "\n",
+    "Subsequent lessons explore the origin and goals for Ray, Ray replacement versions of several popular multiprocessing APIs, a Ray _parallel iterator_ API, and working with Ray clusters using the `ray` command-line interface (CLI).\n",
     "\n",
     "> **Tips:**\n",
     ">\n",
@@ -31,14 +33,15 @@
    "source": [
     "## \"Crash Course\" Tutorial Guide\n",
     "\n",
-    "| #  | Lesson (Notebook)                                 | Description                                               |\n",
-    "| :- | :------------------------------------------------ | :-------------------------------------------------------- |\n",
-    "| 00 | [Overview](00-Ray-Crash-Course-Overview.ipynb)    | This notebook.                                            |\n",
-    "| 01 | [Ray Tasks](01-Ray-Crash-Course-Tasks.ipynb)      | Scaling _stateless_ work using Ray _tasks_.               |\n",
-    "| 02 | [Ray Actors](02-Ray-Crash-Course-Actors.ipynb)    | Scaling work with distributed _state_ using Ray _actors_. |\n",
-    "| 03 | [Why Ray?](03-Why-Ray.ipynb)                      | Now that you've seen Ray in action, take a step back and explore the origin and motivations for Ray, and the Ray growing ecosystem of libraries and tools.  |\n",
-    "| 04 | [Adopting Ray](04-Adopting-Ray.ipynb)             | Ray drop-in replacements for common parallelism APIs, about the Ray community, etc. |\n",
-    "| 05 | [Running Ray Clusters](05-Running-Ray-Clusters.ipynb) | How to run Ray in a clustered environment, submit your work to it, and integrate with your local development process. |"
+    "| #  | Lesson (Notebook)                                         | Description                                               |\n",
+    "| :- | :-------------------------------------------------------- | :-------------------------------------------------------- |\n",
+    "| 00 | [Overview](00-Ray-Crash-Course-Overview.ipynb)            | A _table of contents_ for this tutorial.                  |\n",
+    "| 01 | [Ray Tasks](01-Ray-Crash-Course-Tasks.ipynb)              | Understanding how Ray converts normal Python functions into distributed _stateless tasks_. |\n",
+    "| 02 | [Ray Actors](02-Ray-Crash-Course-Actors.ipynb)            | Understanding how Ray converts normal Python classes into distributed, _stateful actors_.  |\n",
+    "| 03 | [Why Ray?](03-Why-Ray.ipynb)                              | Now that you've seen Ray in action, take a step back and explore the origin and motivations for Ray, and the Ray growing ecosystem of libraries and tools.  |\n",
+    "| 04 | [Ray Multiprocessing](04-Ray-Multiprocessing.ipynb)       | Ray drop-in replacements for common parallelism APIs and integration with `asyncio`. |\n",
+    "| 05 | [Ray Parallel Iterators](05-Ray-Parallel-Iterators.ipynb) | A _parallel iterator_ API for simple data ingest and processing. It can be thought of as syntactic sugar around Ray actors and `ray.wait` loops. |\n",
+    "| 06 | [Running Ray Clusters](06-Running-Ray-Clusters.ipynb) | How to run Ray in a clustered environment, submit your work to it, and integrate with your local development process. |\n"
    ]
   },
   {
