--- a/ray-crash-course/03-Why-Ray.ipynb
+++ b/ray-crash-course/03-Why-Ray.ipynb
@@ -4,9 +4,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Why Ray?\n",
+    "# Ray Crash Course - Why Ray?\n",
     "\n",
-    "[Ray](https://ray.io) is a system for scaling Python applications from your laptop to a cluster with relative ease. It emerged from the [RISELab](https://rise.cs.berkeley.edu/) at Berkeley in response to the problems researchers faced writing advanced ML applications and libraries that could easily scale to a cluster. These researchers found that none of the existing solutions were flexible enough and easy enough to use for their needs. Hence, Ray was born. "
+    "The first two lessons explored using Ray for task and actor concurrency. This lesson takes a step back and explains the challenges that led to the creation of Ray and the Ray ecosystem. The end of this lesson also has links for more or more information on Ray and Anyscale."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "[Ray](https://ray.io) is a system for scaling Python applications from your laptop to a cluster with relative ease. It emerged from the [RISELab](https://rise.cs.berkeley.edu/) at Berkeley in response to the problems researchers faced writing advanced ML applications and libraries that could easily scale to a cluster. These researchers found that none of the existing solutions were flexible enough and easy enough to use for their needs. Hence, Ray was born. \n",
+    "\n",
+    "> **Tip:** For more about Ray, see [ray.io](https://ray.io) or the [Ray documentation](https://docs.ray.io/en/latest/)."
    ]
   },
   {
@@ -112,7 +121,7 @@
     "* [anyscale.com](https://anyscale.com/): The company developing Ray and these tutorials. In particular:\n",
     "    * [Blog](https://anyscale.com/blog/): The Anyscale blog\n",
     "    * [Events](https://anyscale.com/events/): Online events, [Ray Summit](http://raysummit.org), and meetups   \n",
-    "    * [Academy](https://anyscale.com/academy/): Training for Ray and Anyscale products    \n",
+    "    * [Academy](https://anyscale.com/academy/): Training for Ray and Anyscale products - What you're looking at!    \n",
     "    * [Jobs](https://jobs.lever.co/anyscale): Yes, we're hiring!\n",
     "* Community:\n",
     "    * [Ray Slack](ray-distributed.slack.com): The best forum for help on Ray. Use the `#tutorials` channel to ask for help on these tutorials!\n",
@@ -120,6 +129,13 @@
     "    * [@raydistributed](https://twitter.com/raydistributed)\n",
     "    * [@anyscalecompute](https://twitter.com/anyscalecompute)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
