--- a/ray-crash-course/05-Ray-Parallel-Iterators.ipynb
+++ b/ray-crash-course/05-Ray-Parallel-Iterators.ipynb
@@ -4,14 +4,48 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Adopting Ray\n",
+    "# Ray Crash Course - Ray Multiprocessing\n",
     "\n",
-    "This lesson in the _crash course_ discusses how to adopt Ray, focusing on these aspects:\n",
+    "This lesson explores how to replace three popular multiprocessing libraries with Ray replacements to break the one-machine boundary. \n",
     "\n",
-    "* Drop in replacements for popular single-node, multiprocessing libraries.\n",
-    "* The Ray ecosystem, including the community of users and developers, popular Ray-based projects, and resources.\n",
-    "\n",
-    "This information is useful to know before the last lesson on [Running Ray Clusters](04-Running-Ray-Clusters.ipynb)."
+    "> **Tip:** For more about Ray, see [ray.io](https://ray.io) or the [Ray documentation](https://docs.ray.io/en/latest/)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import ray, time, sys, os\n",
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Ray already running or successfully started\n"
+     ]
+    }
+   ],
+   "source": [
+    "!../tools/start-ray.sh"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ray.init(address='auto', ignore_reinit_error=True)"
    ]
   },
   {
@@ -24,9 +58,11 @@
     "\n",
     "More details TBD:\n",
     "\n",
-    "* asyncio\n",
-    "* joblib\n",
-    "* multiprocessing.Pool"
+    "| Library | Library Docs | Ray Docs | Description |\n",
+    "| :------ | :----------- | :------- | :---------- |\n",
+    "| `asyncio` | | | |\n",
+    "| `joblib` | [joblib](https://joblib.readthedocs.io/en/latest/) | [Ray](https://docs.ray.io/en/latest/joblib.html) | Ray supports running distributed [scikit-learn](https://scikit-learn.org/stable/) programs by implementing a Ray backend for `joblib` using Ray Actors instead of local processes. This makes it easy to scale existing applications that use scikit-learn from a single node to a cluster. |\n",
+    "| `multiprocessing.Pool` | [Python](https://docs.python.org/3/library/multiprocessing.html#module-multiprocessing.pool) | [Ray](https://docs.ray.io/en/latest/multiprocessing.html) | Create a pool of processes for running work. The Ray replacement allows scaling to a cluster. |\n"
    ]
   },
   {
@@ -34,19 +70,6 @@
    "metadata": {},
    "source": [
     "TBD: Examples of Each"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import ray, time, sys, os\n",
-    "import numpy as np\n",
-    "import os\n",
-    "sys.path.append(\"..\")         # For library helper functions\n",
-    "from util.printing import pd  # Printing results helper function"
    ]
   },
   {
@@ -64,30 +87,6 @@
     "```python\n",
     "from ray.util.multiprocessing.pool import Pool\n",
     "```"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# The Ray Ecosystem\n",
-    "\n",
-    "* [ray.io](https://ray.io)\n",
-    "* [Ray documentation](https://ray.readthedocs.io/en/latest/)\n",
-    "* [Ray GitHub Repo](https://github.com/ray-project/ray.git)\n",
-    "* See also the [Troubleshooting, Tips, and Tricks](reference/Troubleshooting-Tips-Tricks.ipynb) notebook\n",
-    "\n",
-    "Need help?\n",
-    "\n",
-    "* [Ray Slack](https://ray-distributed.slack.com) - Sign up [here](https://forms.gle/9TSdDYUgxYs8SA9e8)\n",
-    "* [ray-dev Google group](https://groups.google.com/forum/?nomobile=true#!forum/ray-dev) - Not widely used\n",
-    "\n",
-    "For updates on Ray:\n",
-    "\n",
-    "* [Ray Slack](https://ray-distributed.slack.com) - Sign up [here](https://forms.gle/9TSdDYUgxYs8SA9e8)\n",
-    "* [Twitter](https://twitter.com/raydistributed)\n",
-    "\n",
-    "TBD more content..."
    ]
   },
   {
