--- a/ray-crash-course/06-Running-Ray-Clusters.ipynb
+++ b/ray-crash-course/06-Running-Ray-Clusters.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Running Ray Clusters\n",
+    "# Ray Crash Course - Running Ray Clusters\n",
     "\n",
     "How to run a Ray Cluster to scale beyond a single machine. How to submit work to the cluster and monitor progress. How to integrate cluster execution with your local development environment."
    ]
