--- a/Overview.ipynb
+++ b/Overview.ipynb
@@ -104,28 +104,23 @@
     "\n",
     "**Directory:** `ray-crash-course`\n",
     "\n",
-    "**Audience:** You are a developer who wants a fast introduction to the core Ray API. Experienced developers should go to [_Advanced Ray_](#user-content-advanced-ray). Data scientists may wish to skip to [_Ray RLlib_](#user-content-ray-rllib), [_Ray Tune_](#user-content-ray-tune), [_Ray SGD_](#user-content-ray-sgd), or [_Ray Serve_](#user-content-ray-serve).\n",
+    "**Audience:** You are a developer who wants a fast introduction to the core Ray API. The first two lessons cover the essential parts of the Ray API for _tasks_ and _actors_. The rest of the lessons explore the origin and goals for Ray, Ray replacement versions of several popular multiprocessing APIs, a Ray _parallel iterator_ API, and working with Ray clusters using the `ray` command-line interface (CLI).\n",
+    "\n",
+    "Experienced developers should go to [_Advanced Ray_](#user-content-advanced-ray). Data scientists may wish to skip to [_Ray RLlib_](#user-content-ray-rllib), [_Ray Tune_](#user-content-ray-tune), [_Ray SGD_](#user-content-ray-sgd), or [_Ray Serve_](#user-content-ray-serve).\n",
     "\n",
     "This is the place to start if you are new to Ray and you plan to use it to scale Python applications to a cluster. Data scientists working with Ray-based toolkits, like _RLlib_, don't need this knowledge to get started.\n",
     "\n",
     "The _crash course_ is intended to focus on learning the core API as quickly as possible, but using nontrivial examples. In contrast, the [_Advanced Ray_](#user-content-advanced-ray) tutorial begins with an explanation of why Ray was created, what problems it solves, and then dives into more advanced API usage, profiling and debugging applications, and how Ray works behind the scenes.\n",
     "\n",
-    "| #  | Lesson (Notebook)                                     | Description                                               |\n",
-    "| :- | :---------------------------------------------------- | :-------------------------------------------------------- |\n",
-    "| 00 | [Overview](00-Ray-Crash-Course-Overview.ipynb)        | A _table of contents_ for this tutorial.                  |\n",
-    "| 01 | [Ray Tasks](01-Ray-Crash-Course-Tasks.ipynb)          | Understanding how Ray converts normal Python functions into distributed _stateless tasks_. |\n",
-    "| 02 | [Ray Actors](02-Ray-Crash-Course-Actors.ipynb)        | Understanding how Ray converts normal Python classes into distributed, _stateful actors_.  |\n",
-    "| 03 | [Why Ray?](03-Why-Ray.ipynb)                          | Now that you've seen Ray in action, take a step back and explore the origin and motivations for Ray, and the Ray growing ecosystem of libraries and tools.  |\n",
-    "| 04 | [Adopting Ray](04-Adopting-Ray.ipynb)                 | Ray drop-in replacements for common parallelism APIs, about the Ray community, etc. |\n",
-    "| 05 | [Running Ray Clusters](05-Running-Ray-Clusters.ipynb) | How to run Ray in a clustered environment, submit your work to it, and integrate with your local development processes. |\n",
-    "\n",
-    "<!--\n",
-    "* 00 - [Overview](ray-crash-course/00-Ray-Crash-Course-Overview.ipynb): A _table of contents_ for this tutorial.\n",
-    "* 01 - [Ray Crash Course: Tasks](ray-crash-course/01-Ray-Crash-Course-Tasks.ipynb): Understanding how Ray converts normal Python functions into distributed _stateless tasks_.\n",
-    "* 02 - [Ray Crash Course: Actors](ray-crash-course/02-Ray-Crash-Course-Actors.ipynb): Understanding how Ray converts normal Python classes into distributed, _stateful actors_.\n",
-    "* 03 - [Adopting Ray](03-Adopting-Ray.ipynb): Ray drop-in replacements for common parallelism APIs, about the Ray community, etc.\n",
-    "* 04 - [Running Ray Clusters](04-Running-Ray-Clusters.ipynb): How to run Ray in a clustered environment, submit your work to it, and integrate with your local development processes.\n",
-    "-->\n",
+    "| #  | Lesson (Notebook)                                         | Description                                               |\n",
+    "| :- | :-------------------------------------------------------- | :-------------------------------------------------------- |\n",
+    "| 00 | [Overview](00-Ray-Crash-Course-Overview.ipynb)            | A _table of contents_ for this tutorial.                  |\n",
+    "| 01 | [Ray Tasks](01-Ray-Crash-Course-Tasks.ipynb)              | Understanding how Ray converts normal Python functions into distributed _stateless tasks_. |\n",
+    "| 02 | [Ray Actors](02-Ray-Crash-Course-Actors.ipynb)            | Understanding how Ray converts normal Python classes into distributed, _stateful actors_.  |\n",
+    "| 03 | [Why Ray?](03-Why-Ray.ipynb)                              | Now that you've seen Ray in action, take a step back and explore the origin and motivations for Ray, and the Ray growing ecosystem of libraries and tools.  |\n",
+    "| 04 | [Ray Multiprocessing](04-Ray-Multiprocessing.ipynb)       | Ray drop-in replacements for common parallelism APIs and integration with `asyncio`. |\n",
+    "| 05 | [Ray Parallel Iterators](05-Ray-Parallel-Iterators.ipynb) | A _parallel iterator_ API for simple data ingest and processing. It can be thought of as syntactic sugar around Ray actors and `ray.wait` loops. |\n",
+    "| 06 | [Running Ray Clusters](06-Running-Ray-Clusters.ipynb) | How to run Ray in a clustered environment, submit your work to it, and integrate with your local development process. |\n",
     "\n",
     "In addition, exercise solutions for this tutorial can be found [here](advanced-ray/solutions/Ray-Crash-Course-Solutions.ipynb).\n",
     "\n",
